--- a/exam/style.css
+++ b/exam/style.css
@@ -18,7 +18,12 @@ body {
 }
 
 .img-size {
-    height: 40%;
-    width: 50%;
+    height: 600px;
+    width: 1100px;
     align-items: center;
+    margin: 10px;
+}
+
+.modal-body {
+    background-color: lightgrey;
 }
