--- a/exam/style.css
+++ b/exam/style.css
@@ -18,8 +18,8 @@ body {
 }
 
 .img-size {
-    height: 600px;
-    width: 1100px;
+    height: auto;
+    width: 100%;
     align-items: center;
     margin: 10px;
 }
