--- a/Activity1/style.css
+++ b/Activity1/style.css
@@ -6,6 +6,7 @@
 
 #navv {
 	padding-bottom: 50px;
+	position: static;
 }
 
 .collapsible {
@@ -13,5 +14,6 @@
 }
 
 .card {
-	margin: 50px;
+	margin: 5% auto;
+	position: inherit;
 }
